fixed whitespace on browse

--- a/styles/FilterBox.module.scss
+++ b/styles/FilterBox.module.scss
@@ -9,6 +9,7 @@
   cursor: pointer;
   transition: all 150ms ease-in-out;
   z-index: 9999;
+  max-height: 0px;
 }
 
 .infoList {
@@ -17,9 +18,6 @@
   gap: 0.5rem;
   opacity: 0;
   max-height: 0px;
-  transition-property: opacity, max-height;
-  transition-duration: 250ms;
-  transition-timing-function: ease-in-out;
   z-index: 1;
 }
 
@@ -29,10 +27,16 @@
   justify-content: space-between;
   gap: 1rem;
   z-index: 9999;
+  max-height: 0px;
 
   label,
   input {
+    max-height: 0px;
     cursor: pointer;
+  }
+
+  input {
+    height: 0px;
   }
 }
 
