--- a/styles/Jump.module.scss
+++ b/styles/Jump.module.scss
@@ -13,6 +13,7 @@
     background-color: #0070f0;
     cursor: pointer;
     transition: all 150ms ease-in-out;
+    z-index: 9999;
 }
 
 .jump:hover {
